<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="E-Posta Adresi"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:background="@color/lightGray"
                android:paddingLeft="10dp"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Şifre"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:background="@color/lightGray"
                android:paddingLeft="10dp"
                android:textColor="@color/green"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/green"
                android:text="Giriş Yap"
                android:textColor="@color/boldWhite"
                android:textStyle="bold"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>